[package]
name = "bin"
version = "0.1.0"
edition = "2024"

[dependencies]  
axum = "0.8.6"
config = { version = "0.1.0", path = "../config" }
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
